Fix card 01 transform-origin to top left for consistent image alignment

--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,7 @@ body {
   height: 65vh;
   width: auto;
   transform: scale(1.2);
-  transform-origin: left;
+  transform-origin: top left;
   margin-bottom: 50px;
 }
 
